--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/dat.gui": "^0.7.13",
     "@webgpu/types": "^0.1.52",
     "typescript": "~5.6.2",
     "vite": "^6.0.5"
   },
   "dependencies": {
+    "dat.gui": "^0.7.9",
     "gl-matrix": "^3.4.3"
   }
 }
