--- a/package.json
+++ b/package.json
@@ -10,14 +10,13 @@
   },
   "devDependencies": {
     "@types/dat.gui": "^0.7.13",
-    "@types/stats.js": "^0.17.3",
     "@webgpu/types": "^0.1.52",
-    "typescript": "~5.6.2",
-    "vite": "^6.0.5"
+    "typescript": "~5.6.3",
+    "vite": "^6.0.7"
   },
   "dependencies": {
     "dat.gui": "^0.7.9",
     "gl-matrix": "^3.4.3",
-    "stats.js": "^0.17.0"
+    "stats.js": "github:Guilospanck/stats.js"
   }
 }
